<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>lwc</artifactId>
    <name>LWC</name>
    <packaging>jar</packaging>
    <version>4.8.0-SNAPSHOT</version>

    <parent>
        <groupId>com.griefcraft</groupId>
        <artifactId>lwc-parent</artifactId>
        <version>4.8.0-SNAPSHOT</version>
        <relativePath>../</relativePath>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository><!-- needed for worldedit 7 -->
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.sk89q.com/repo/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>

        <!-- Plugin Support -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.7</version>
            <scope>provided</scope>
        </dependency>
        <!--
        <dependency>
            <groupId>com.herocraftonline.heroes</groupId>
            <artifactId>Heroes</artifactId>
            <version>1.5.5</version>
            <scope>provided</scope>
        </dependency>
        -->

        <!-- Find repos for these -->
        <dependency>
            <groupId>Heroes</groupId>
            <artifactId>Heroes</artifactId>
            <version>1.5.1-dev-b1666</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/plugins/Heroes.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>MobArena</groupId>
            <artifactId>MobArena</artifactId>
            <version>0.94.4.52</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/plugins/MobArena-v0.94.4.52.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>Showcase</groupId>
            <artifactId>Showcase</artifactId>
            <version>0.7.7</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/plugins/Showcase0.7.7.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>Towny</groupId>
            <artifactId>Towny</artifactId>
            <version>0.74.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/plugins/Towny.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>Towny_Advanced</groupId>
            <artifactId>Towny_Advanced</artifactId>
            <version>0.76.3.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/plugins/Towny_Advanced.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <directory>../target</directory>

        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            
            <!-- This plugin is required to fix a UTF-8 bug in resource filtering: -->
            <!-- (bug in 3.2.0+) (last tested 3.3.1) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            
        </plugins>
        
    </build>
</project>
